--- a/teste-mvc-webapp/Views/Shared/_Layout.cshtml
+++ b/teste-mvc-webapp/Views/Shared/_Layout.cshtml
@@ -10,6 +10,9 @@
 </head>
 <body>
     <header>
+        <h1>Meusite.com.br</h1>
+        @Html.ActionLink("Home","Index","Home")
+        @Html.ActionLink("Veja o privacy","Privacy","Home")
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">teste_mvc_webapp</a>
