--- a/teste-mvc-webapp/Views/Home/Index.cshtml
+++ b/teste-mvc-webapp/Views/Home/Index.cshtml
@@ -1,8 +1,59 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+@model IEnumerable<teste_mvc_webapp.Models.crud>
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+@{
+    ViewBag.Title="Listagem de Pessoa";
+}    
+
+<h4>Listagem de Pessoa</h4>
+<p>
+    <a asp-action="Create" class="btn btn-outline-success btn-sm">Nova Pessoa</a>
+</p>
+<table class="table table-hover">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Id);
+            </th>
+            
+            <th>
+                @Html.DisplayNameFor(model => model.Nome);
+            </th>
+            
+            <th>
+                @Html.DisplayNameFor(model => model.Email);
+            </th>
+            
+            <th>
+                @Html.DisplayNameFor(model => model.Senha);            
+            </th>
+        </tr>
+    </thead>
+
+    <tbody>
+@foreach (var item in Model){
+    <tr>
+        <td>
+            @Html.DisplayNameFor(modelItem => modelItem.Id);
+        </td>
+
+        <td>
+            @Html.DisplayNameFor(modelItem => modelItem.Nome);
+        </td>
+
+        <td>
+            @Html.DisplayNameFor(modelItem => modelItem.Email);
+        </td>
+
+        <td>
+            @Html.DisplayNameFor(modelItem => modelItem.Senha);            
+        </td>
+
+        <td>
+            <a asp-controler="Pessoa" asp-action="Edit" aps-route-id="@item.Id" class="btn btn-outline-info btn-sm">Atualizar</a> &emsp;
+            <form action asp-controler="Pessoa" asp-action="Delete" aps-route-id="@item.Id" onclick="confirm('Seguir excluindo @item.Nome ?')">
+              <button type="submit" class="btn btn-outline-danger btn-sm">Excluir</button>  
+        </td>
+    </tr>
+}
+    </tbody>
+</table>
