--- a/teste-mvc-webapp/Views/Shared/Pessoa.cshtml
+++ b/teste-mvc-webapp/Views/Shared/Pessoa.cshtml
@@ -1,4 +1,4 @@
-﻿@model ErrorViewModel
+﻿@model Pessoa
 @{
     ViewData["Title"] = "Error";
 }
@@ -6,12 +6,11 @@
 <h1 class="text-danger">Error.</h1>
 <h2 class="text-danger">An error occurred while processing your request.</h2>
 
-@if (Model?.ShowRequestId ?? false)
-{
+
     <p>
-        <strong>Request ID:</strong> <code>@Model?.RequestId</code>
+        <strong>Request ID:</strong> <code>@Model?.Nome</code> 
     </p>
-}
+
 
 <h3>Development Mode</h3>
 <p>
